Exception Handling Practice.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,10 @@
 spring.application.name=product
-spring.datasource..url=jdbc:h2:mem:testDB
+# Database configuration
+spring.datasource.url=jdbc:mysql://localhost:3306/product_db
+spring.datasource.username=root
+spring.datasource.password=GanpatiTR@777
+
+# JPA / Hibernate config
+spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
