--- a/pom.xml
+++ b/pom.xml
@@ -10,10 +10,10 @@
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
 	<groupId>com.ganpati</groupId>
-	<artifactId>product</artifactId>
+	<artifactId>shoppingkart</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
-	<name>product</name>
-	<description>Product Application</description>
+	<name>shoppingkart</name>
+	<description>Shopping Kart Application</description>
 	<url/>
 	<licenses>
 		<license/>
@@ -64,6 +64,12 @@
 			<groupId>com.mysql</groupId>
 			<artifactId>mysql-connector-j</artifactId>
 			<scope>runtime</scope>
+		</dependency>
+
+		<dependency>
+			<groupId>org.springdoc</groupId>
+			<artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
+			<version>2.8.8</version>
 		</dependency>
 	</dependencies>
 
