--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.application.name=product
+spring.application.name=shoppingkart
 # Database configuration
 spring.datasource.url=jdbc:mysql://localhost:3306/product_db
 spring.datasource.username=root
